# quantlib-old

./: .gitignore  .project  0001-Swig-updates-for-swaps.patch  Makefile.am  QuantLib_vc10.vcxproj  QuantLib_vc10.vcxproj.filters  README.md
ObjectHandler/: .cvsignore  .gitignore  Announce.txt  Authors.txt  Contributors.txt  LICENSE.TXT  Makefile  Makefile.am  NEWS.txt  ObjectHandler.dev  ObjectHandler.dsp  ObjectHandler.dsw  ObjectHandler.nsi  ObjectHandler.sln  ObjectHandler.vcproj  ObjectHandler_vc10.sln  ObjectHandler_vc11.sln  ObjectHandler_vc12.sln  ObjectHandler_vc14.sln  ObjectHandler_vc7.sln  ObjectHandler_vc8.sln  ObjectHandler_vc8.vcproj  ObjectHandler_vc9.sln  README  README.txt  TODO.txt  cmd  configure.ac  lib.dsp  lib_vc8.vcproj  makefile.mak  ohlib.dsp  ohlib.vcproj  ohlib_vc10.vcxproj  ohlib_vc10.vcxproj.filters  ohlib_vc11.vcxproj  ohlib_vc12.vcxproj  ohlib_vc12.vcxproj.filters  ohlib_vc14.vcxproj  ohlib_vc14.vcxproj.filters  (+3 more)
ObjectHandler/Docs/: .cvsignore  .gitignore  Makefile.am  Makefile.vc  ObjectHandler-docs.hhp  docs.vcproj  docs_vc10.vcxproj  docs_vc10.vcxproj.filters  docs_vc11.vcxproj  docs_vc12.vcxproj  docs_vc12.vcxproj.filters  docs_vc14.vcxproj  docs_vc7.vcproj  docs_vc8.vcproj  docs_vc9.vcproj  doxygen.css  makefile.mak  objecthandler.doxy  oh_footer.html  oh_header.html  oh_headeronline.html  ql.css  style.css
ObjectHandler/Example/: .cvsignore  Example.dev  Example.dsp  Example.vcproj  Example_vc8.vcproj  Makefile  Makefile.am  example.cpp  interface.cpp  interface.hpp  makefile.mak  objectfoo.cpp  objectfoo.hpp  objectwidget.cpp  objectwidget.hpp  utilities.cpp  utilities.hpp  widget.hpp
ObjectHandler/Examples/: Makefile.am  examplefactory.cpp  examplefactory.hpp
ObjectHandler/ObjectHandler/: .cvsignore  Makefile  Makefile.am  autolink.hpp  exception.cpp  exception.hpp  makefile.mak  object.cpp  object.hpp  objecthandler.cpp  objecthandler.hpp  objecthandlerversion.hpp  objhandler.hpp  objhandlerdefines.hpp  property.cpp  property.hpp  propertyvector.hpp  singleton.hpp  utilities.cpp  utilities.hpp
ObjectHandler/dev_tools/: .upgrade_vc.py.swp  builds.xlsx  config  find_replace.py  logo_ql.xcf  logo_reposit.xcf  logos.txt  logos.xcf  notes.txt  oh-qla.html  preprocess_doxyfile.py  release_notice.txt  scp.bat  setenv.branch.bat  setenv.py  tgz2zip  upgrade_vc.py
ObjectHandler/gensrc/: .cvsignore  Makefile.am  Makefile.vc  ohgensrc.vcproj  ohgensrc_vc10.vcxproj  ohgensrc_vc11.vcxproj  ohgensrc_vc11.vcxproj.filters  ohgensrc_vc12.vcxproj  ohgensrc_vc12.vcxproj.filters  ohgensrc_vc14.vcxproj  ohgensrc_vc7.vcproj  ohgensrc_vc8.vcproj  ohgensrc_vc9.vcproj
ObjectHandler/oh/: .cvsignore  Makefile.am  ObjectHandler.dsp  auto_link.hpp  autolink.hpp  demo.hpp  exception.cpp  exception.hpp  factory.hpp  group.hpp  iless.hpp  libraryobject.hpp  logger.cpp  logger.hpp  object.cpp  object.hpp  objecthandler.cpp  objecthandler.hpp  objecthandlerbase.cpp  objecthandlerbase.hpp  objectwrapper.hpp  objhandler.hpp  objhandlerdefines.hpp  observable.hpp  ohdefines.hpp  ohthing.cpp  ohthing.hpp  other.hpp  processor.cpp  processor.hpp  property.hpp  range.hpp  repository.cpp  repository.hpp  serializationfactory.cpp  serializationfactory.hpp  singleton.hpp  types.hpp  utilities.cpp  utilities.hpp  (+3 more)
ObjectHandler/ohxl/: Makefile.am  callingrange.cpp  callingrange.hpp  configuration.cpp  configuration.hpp  conversions.cpp  export.hpp  (+27 more)
QuantLib-SWIG/: .cvsignore  ChangeLog.txt  LICENSE.TXT  Makefile.am  News.txt  acinclude.m4  autogen.sh  configure.ac  configure_local.sh
QuantLibAddin/: .cvsignore  .gitignore  Announce.txt  Authors.txt  Contributors.txt  LICENSE.TXT  Makefile  Makefile.am  NEWS.txt  QLA_serialization_vc8.sln  QuantLibAddin-bin.nsi  QuantLibAddin.dev  QuantLibAddin.dsp  QuantLibAddin.dsw  QuantLibAddin.nsi  QuantLibAddin.sln  QuantLibAddin.vcproj  QuantLibAddinCalc_vc7.sln  QuantLibAddin_vc10.sln  QuantLibAddin_vc11.sln  QuantLibAddin_vc12.sln  QuantLibAddin_vc14.sln  QuantLibAddin_vc7.sln  QuantLibAddin_vc8.sln  QuantLibAddin_vc8.vcproj  QuantLibAddin_vc9.sln  QuantLibObjects.vcproj  QuantLibObjects2_vc10.vcxproj  QuantLibObjects2_vc10.vcxproj.filters  QuantLibObjects2_vc11.vcxproj  QuantLibObjects2_vc11.vcxproj.filters  QuantLibObjects2_vc12.vcxproj  QuantLibObjects2_vc12.vcxproj.filters  QuantLibObjects2_vc14.vcxproj  QuantLibObjects3_vc10.vcxproj  QuantLibObjects3_vc11.vcxproj  QuantLibObjects3_vc12.vcxproj  QuantLibObjects3_vc14.vcxproj  QuantLibObjects4_vc10.vcxproj  QuantLibObjects4_vc11.vcxproj  (+26 more)
QuantLibXL/: .cvsignore  .gitignore  Authors.txt  BUG.txt  ChangeLog.txt  Contributors.txt  History.txt  LICENSE.TXT  Makefile.am  NEWS.txt  News.txt  QuantLibAll.sln  QuantLibAllDynamic_vc10.sln  QuantLibAllDynamic_vc11.sln  QuantLibAllDynamic_vc12.sln  QuantLibAllDynamic_vc14.sln  QuantLibAllDynamic_vc7.sln  QuantLibAllDynamic_vc8.sln  QuantLibAllDynamic_vc9.sln  QuantLibAllStatic_vc7.sln  QuantLibAllStatic_vc8.sln  QuantLibAllStatic_vc9.sln  QuantLibAll_dynamic_vc8.sln  QuantLibAll_vc7.sln  QuantLibAll_vc8.sln  QuantLibXL-bin.nsi  QuantLibXL-network.nsi  QuantLibXL-src.nsi  QuantLibXL.dsp  QuantLibXL.dsw  QuantLibXL.mak  QuantLibXL.network.ini  QuantLibXL.network.nsi  QuantLibXL.nsi  QuantLibXL.sln  QuantLibXL.vcproj  QuantLibXL_basic_vc10.sln  QuantLibXL_basic_vc11.sln  QuantLibXL_basic_vc12.sln  QuantLibXL_basic_vc14.sln  (+31 more)
gensrc/: .cvsignore  .gitignore  Contributors.txt  LICENSE.TXT  Makefile.am  NEWS.txt  README.txt  cmd  configure.ac  cppexceptions.py  debug.py  dependencies.vc  gensrc.nsi  gensrc.py  gensrc.sln  gensrc.vcproj  gensrc_vc10.sln  gensrc_vc10.vcxproj  gensrc_vc10.vcxproj.filters  gensrc_vc11.sln  gensrc_vc11.vcxproj  gensrc_vc11.vcxproj.filters  gensrc_vc7.sln  gensrc_vc7.vcproj  gensrc_vc8.sln  gensrc_vc8.vcproj  gensrc_vc9.sln  gensrc_vc9.vcproj  readme_vc.txt  vim_all_cmd
log4cxx/: .cvsignore  .gitignore  INSTALL  Makefile.am  README  README.txt  autogen.sh  build.xml  cmd  configure-aprutil.bat  configure.bat  configure.in  cygwin-diff-log4cxx.diff  doap_log4cxx.rdf  find_apr.m4  find_apu.m4  log4cxx.nsi  pom.xml
(+8308 files in other folders)
